welcome.lessons.welcome.array.array667.Array667.scala.error
array667:8: error: illegal start of simple expression
    if (nums(i-1)==6 && nums(i)==7)) {
                                   ^